# magnit

./: .gitignore  config.env  requirements.txt  serv.py
.devcontainer/: docker-compose.yaml  queries.sql
components/backend/: requirements.txt  setup.cfg
components/backend/magnit/adapters/database/: __init__.py  mapping.py  settings.py  tables.py  wsd_creator.py
components/backend/magnit/adapters/database/alembic/: env.py
components/backend/magnit/adapters/database/migrations/: 2022_12_07_15_40_25_migration.py  2022_12_07_16_06_56_migration.py  2022_12_07_16_41_16_migration.py  2022_12_20_18_22_08_migration.py  2023_02_21_06_21_04_migration.py  2023_02_22_08_29_47_migration.py  2023_04_15_07_06_44_migration.py  2023_08_05_11_35_17_migration.py  2023_08_05_17_31_20_migration.py  2023_08_06_08_39_40_migration.py  2023_08_06_08_48_07_migration.py  2024_04_12_11_04_11_migration.py  2024_06_30_01_57_48_migration.py  2024_08_18_00_13_20_migration.py  2024_09_21_03_17_32_migration.py
components/backend/magnit/adapters/database/repositories/: __init__.py  auth.py  base_repo.py  contragents.py  doc_logs.py  permits.py  polygons.py  service_contracts.py  users.py  vehicles.py  visits.py
components/backend/magnit/adapters/etl_from_excel/: __init__.py  base_excel_parser.py  excel_parser.py
components/backend/magnit/adapters/http_api/: __init__.py  app.py  auth.py  constants.py  serializer.py  settings.py  spec.py
components/backend/magnit/adapters/http_api/controllers/: __init__.py  auth.py  contragents.py  doc_logs.py  docs.py  drivers.py  lots.py  permits.py  polygons.py  trucks.py  users.py  vehicles.py  visits.py
components/backend/magnit/adapters/integration/clients/: __init__.py
components/backend/magnit/adapters/integration/tasks/: __init__.py  fgis_utko.py
components/backend/magnit/adapters/logger/: config.py  settings.py
components/backend/magnit/application/: constants.py  dto.py  dtos_layer.py  entities.py  errors.py  interfaces.py
components/backend/magnit/application/services/: __init__.py  auth.py  contragents.py  docs.py  permits.py  polygons.py  trucks.py  users.py  vehicles.py  visits.py
components/backend/magnit/composites/: alembic_runner.py  api.py  scheduler.py  waitress_server.py
magnit_app/components/backend/magnit/: setup.cfg
magnit_app/components/backend/magnit/adapters/database/: constants.py  mapping.py  settings.py  tables.py  wsd_creator.py
magnit_app/components/backend/magnit/application/: constants.py  dtos_layer.py  entities.py  errors.py  interfaces.py
magnit_app/components/backend/magnit/composites/: alembic_runner.py  api.py
(+190 files in other folders)
