[metadata]
name = magnit
version = 0.0.1
description = Control and pass system for polygons.
author = Vasilevich Denis, Benzak Nikolay
author_email = rudevelooper@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benzakalexey/magnit
project_urls =
    Bug Tracker = https://github.com/benzakalexey/magnit/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Beta


[options]
packages = find_namespace:
python_requires = ~=3.10

package_dir =
    = .
include_package_data = True

install_requires =
    alembic==1.7.7
    attrs==21.2.0
    classic-app-layer==0.0.1
    classic-aspects==0.0.1
    classic-scheduler==0.0.1
    classic-components==0.0.1
    classic-http-api==0.0.2
    classic-sql-storage==0.0.1
    falcon-cors==1.1.7
    gunicorn==20.1.0
    jwt==1.3.1
    openpyxl==3.0.10
    psycopg2-binary==2.9.5
    pydantic==1.8.2
    requests==2.32.3
    pyjwt==2.6.0
    python-json-logger==2.0.4
    python_dotenv==0.21.0
    sqlalchemy==1.4.41
    uuid==1.30

[options.packages.find]
where = .

[options.package_data]
* =
    *.json

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-cov==2.12.1
    isort==5.10.0
    yapf==0.32.0

[options.entry_points]
console_scripts =
    magnit=magnit.composites.cli:cli