[metadata]
name = magnit
version = 0.0.1
description = Control and pass system for polygons.
author = Vasilevich Denis, Benzak Nikolay
author_email = rudevelooper@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benzakalexey/magnit
project_urls =
    Bug Tracker = https://github.com/benzakalexey/magnit/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7

install_requires =
    alembic~=1.7.0
    attrs~=21.2.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    classic-components~=0.0.1
    classic-aspects~=0.0.1
    classic-http-api~=0.0.2
    classic-app-layer~=0.0.1
    classic-sql-storage~=0.0.1
    classic-messaging~=0.0.1
    classic-messaging-kombu~=0.0.1

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
